<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">I\'m OK!</string>

    <string name="imok_name">I\'m OK!</string>
	<string name="imok_menu_setup">Settings</string>
    <string name="imok_menu_about">About</string>
	<string name="imok_text">&lt;i>I\'m OK!&lt;/i> notifies your friends and family in the event of an emergency.  Visit our web site for more information:&lt;br>http://imokapp.appspot.com</string>
    <string name="imok_button">I\'m OK!</string>
    <string name="imok_help_button">Need Help</string>
    
    <string name="imok_about_dialog_title">I\'m OK!</string>
    <string name="imok_about_dialog_ok">Ok</string>
    <string name="imok_about_dialog_message">http://imokapp.appspot.com</string>

	<string name="sms_name">Sending Message</string>
	<string name="sms_ok_name">Sending OK Message</string>
	<string name="sms_help_name">Sending Need Help Message</string>
	<string name="sms_ok_text">Your message will be forwarded to all of your contacts and services. If you selected the Person Finder service,it will be posted where &lt;b>anybody&lt;/b> can see it.</string>
	<string name="sms_911_text">IF YOU NEED IMMEDIATE HELP, YOU SHOULD CALL YOUR LOCAL EMERGENCY PHONE NUMBER, SUCH AS 911.  MESSAGES SENT BY THIS APP MAY NOT REACH EMERGENCY RESPONDERS.</string>
	<string name="sms_911_continue">Continue</string>
	<string name="sms_911_cancel">Cancel</string>
	<string name="sms_needhelp_text">Your message will be forwarded to your emergency contacts and services. Emergency responders will also be allowed to read it.  If you selected the Person Finder service, it will be posted where &lt;b>anybody&lt;/b> can see it.</string>
	<string name="sms_location_msg">Your location (optional):</string>
	<string name="sms_free_msg">Your message (optional):</string>
	<string name="sms_remaining">Characters left: %1$d</string>
	<string name="sms_sent_title">Message Sent</string>
	<string name="sms_sent_message">Message sent.  The server will send a confirmation once it receives your message.</string>
	<string name="sms_error_title">Error Sending Message</string>
	<string name="sms_error_message">There was an error sending your message.  Please try again.</string>

    <string name="settings_name">Settings</string>
    <string name="settings_category_gateway">Gateway Settings</string>
    <string name="settings_gateway_phone_name">Gateway Phone Number</string>
    <string name="settings_gateway_phone_title">Gateway Phone Number</string>
    <string name="settings_gateway_phone_summary">650-691-5005</string>
    
    <string name="settings_gateway_verify_name">Verify Phone</string>
    <string name="settings_gateway_verify_title">Verify Phone</string>
    <string name="settings_gateway_unverified">Unverified</string>
    <string name="settings_gateway_verified">Verified</string>
    
    <string name="settings_ensure_message_verified">You have already verified your phone number. Would you like to verify it again?</string>
    <string name="settings_ensure_message_unverified">We are going to send an SMS to verify your phone number with the gateway. Is this OK?</string>
    
    <string name="settings_dialog_instruct_title">SMS Sent</string>
    <string name="settings_dialog_instruct_message">Please login to the "I'm OK" website and check whether your phone number has been verified under your account.</string>
    
    <string name="settings_dialog_error_title">Error Sending SMS</string>
    <string name="settings_dialog_error_message">There was an error sending the verification SMS. Please check the gateway number and try again.</string>
    
	<string name="userkey_name">User Key</string>
	<string name="userkey_text">Please go to http:/imok.jeztek.com and enter the user key provided:</string>
	<string name="userkey_edittext"></string>
	<string name="userkey_button">Ok</string>
</resources>
