<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dip"
    >
    	
<TextView 
	android:text="@string/userkey_text" 
	android:id="@+id/userkey_text"
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:layout_marginTop="30dip"
	android:layout_marginBottom="10dip" 
	/>
	
<EditText
	android:text="@string/userkey_edittext"
	android:id="@+id/userkey_edittext" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:padding="25dip"
	android:layout_marginBottom="10dip" 
	/>

<Button 
	android:text="@string/userkey_button" 
	android:id="@+id/userkey_button" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:padding="25dip"
	android:layout_marginBottom="10dip" 
	/>
</LinearLayout>
